--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,24 @@ services:
     networks:
     - dbnetwork
 
+  mysql:
+    image: futurehomesql
+
+    #Questions 1: What environmental variables are required by this image?
+    env_file:
+    - .env
+
+    #Question 2: Does the software have a port (inside the container) it runs on by default?
+    ports:
+    - 3306:3306
+
+    #Question 3: What folder inside the container stores the data you need to save?
+    volumes:
+    - mysqldata:/var/lib/mysql
+
+    networks:
+    - dbnetwork
+
 volumes:
   postgresdata:
 
